syntax = "proto3";

package product;

service ProductService {
  rpc CreateProduct (CreateProductRequest) returns (CreateProductResponse) {}
  rpc UpdateProduct (UpdateProductRequest) returns (CreateProductResponse) {}
  rpc GetProduct (GetProductRequest) returns (CreateProductResponse) {}
  rpc GetListProduct (GetListProductRequest) returns (GetListProductResponse) {}
  rpc DeleteProduct (DeleteProductRequest) returns (DeleteProductResponse) {}
}

message CreateProductRequest {
  string product_code = 1;
  string product_name = 2;
  int64 price = 3;
}

message CreateProductResponse {
  int32 id = 1;
  string product_code = 2;
  string product_name = 3;
  int64 price = 4;
  string created_at = 5;
  string updated_at = 6;
}

message GetProductRequest {
  int32 id = 1;
}

message GetListProductRequest {
  int32 limit = 1;
  int32 page = 2;
}

message GetListProductResponse {
  repeated CreateProductResponse listProduct = 1;
}

message UpdateProductRequest {
  int32 id = 1;
  string product_code = 2;
  string product_name = 3;
  int64 price = 4;
}

message DeleteProductRequest {
  int32 id = 1;
}

message DeleteProductResponse {
  string message = 1;
}